feed representative name selected from list into news api

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="collection-header reps"><h4>Reps</h4></li>
             </ul>
             <div class="col s9">
-                <p id="display-news">News displayed here</p>
+                <p class="display-news"></p>
             </div>
         </div>
     </div>
