scroll added for long descriptions

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <ul class="collection with-header col s3">
                 <li class="collection-header reps"><h4>Reps</h4></li>
             </ul>
-            <div class="col s9">
-                <p class="display-news"></p>
+            <div class="col s9 display-news">
             </div>
         </div>
     </div>
