--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                 <div class="input-field col s12">
                     <textarea id="state-input" class="materialize-textarea"></textarea>
                     <label for="textarea1">Enter Your State</label>
+                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state">
+                        <i class="material-icons">search</i>
+                    </button>
+    
                 </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action" id="submit-state">Submit
-                    <i class="material-icons right">send</i>
-                </button>
         </form>
         </div>
         <div class="row">
