Added background video and some styling.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
     <title>We The People</title>
 </head>
-<body>    
+<body>  
+    <video autoplay muted loop id="myVideo">
+        <source src="assets\images\Washington DC Capitol 4K FREE STOCK FOOTAGE_Trim.mp4" type="video/mp4">
+    </video>
+
     <div class="container">
         <div class="row center">
             <div class="col s12">
             <h1 class="cursive front-page">We The People</h1>
         <!-- Lame, please change site about -->
-            <h4 class="about">Learn more about your local representatives with recent news</h4>
+            <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
             </div>
         </div>
         <div class="row">
