--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
     <title>We The People</title>
 </head>
-<body>  
+
+<body>
     <video autoplay muted loop id="myVideo">
         <source src="assets\images\Washington DC Capitol 4K FREE STOCK FOOTAGE_Trim.mp4" type="video/mp4">
     </video>
-
+    <div class="mod" id="modal">
+        <div class="modal-header">
+            <div class="title">
+                <h4>No articles found for this Rep.</h4>
+            </div>
+            <button class="close-button">&times;</button>
+        </div>
+        <div class="modal-body">
+            <img id="bernie" src="assets/images/bernie-pic.jpg" alt="bernie-mittens" class="center">
+        </div>
+    </div>
+    <div id="overlay"></div>
     <div class="container">
         <div class="row center">
             <div class="col s12">
             <h1 class="cursive front-page">We The People</h1>
-        <!-- Lame, please change site about -->
-            <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
+         <!-- Lame, please change site about -->
+    <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
             </div>
         </div>
         <div class="row">
@@ -45,6 +58,7 @@
         </div>
     </div>
 </body>
+
 </html>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
