front page text and style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <div class="row center">
             <div class="col s12">
             <h1 class="cursive front-page">We The People</h1>
-         <!-- Lame, please change site about -->
     <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
             </div>
         </div>
@@ -40,8 +39,8 @@
             <form class="col s12">
                 <div class="input-field">
                     <textarea id="state-input" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Enter Address, City, State, or Zip</label>
-                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state">View LOCAL Representatives
+                    <label for="textarea1">Enter Address, City, State, or Zip for Local Represntatives</label>
+                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state"><i class="material-icons">search</i>
                     </button>
                     <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action" id="history-state">
                         <i class="material-icons">history</i>
