--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
     <div id="overlay"></div>
     <div class="container">
-        <div class="row center">
+        <div class="row">
             <div class="col s12">
             <h1 class="cursive front-page">We The People</h1>
-    <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
+            <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
             </div>
         </div>
         <div class="row">
