--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div>
         <div class="row">
             <ul class="collection with-header col s3 z-depth-1">
-                <li class="collection-header reps"><h5 class="cursive">Representatives</h5></li>
+                <li class="collection-header"><h5 class="cursive">Representatives</h5></li>
+                <li class="reps"></li>
             </ul>
             <div class="col s9 display-news">
             </div>
