all rep names prompt either articles or a modal.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-            <h1 class="cursive front-page">We The People</h1>
-            <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
+                <h1 class="cursive front-page">We The People</h1>
+                <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
             </div>
         </div>
         <div class="row">
@@ -40,17 +40,21 @@
                 <div class="input-field">
                     <textarea id="state-input" class="materialize-textarea"></textarea>
                     <label for="textarea1">Enter Address, City, State, or Zip for Local Represntatives</label>
-                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state"><i class="material-icons">search</i>
+                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state"><i
+                            class="material-icons">search</i>
                     </button>
-                    <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action" id="history-state">
+                    <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action"
+                        id="history-state">
                         <i class="material-icons">history</i>
                     </button>
                 </div>
-        </form>
+            </form>
         </div>
         <div class="row">
             <ul class="collection with-header col s3 z-depth-1">
-                <li class="collection-header"><h5 class="cursive">Representatives</h5></li>
+                <li class="collection-header">
+                    <h5 class="cursive">Representatives</h5>
+                </li>
                 <li class="reps"></li>
             </ul>
             <div class="col s9 display-news">
@@ -63,4 +67,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/api.js"></script>
-<script src="assets/JS/script.js"></script> 
+<script src="assets/JS/script.js"></script>
