code cleaned up, readme updated, screenshots added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
     <title>We The People</title>
 </head>
-
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="assets\images\Washington DC Capitol 4K FREE STOCK FOOTAGE_Trim.mp4" type="video/mp4">
+        <source src="assets\videos\Washington DC Capitol.mp4" type="video/mp4">
     </video>
     <div class="mod" id="modal">
         <div class="modal-header">
@@ -31,8 +29,8 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h1 class="cursive front-page">We The People</h1>
-                <h4 class="about">A Non-Partisan Site to Find Congressional News and More</h4>
+                <h1 class="cursive front-page center">We The People</h1>
+                <h4 class="about center">A Non-Partisan Site to Find Congressional News</h4>
             </div>
         </div>
         <div class="row">
@@ -40,11 +38,10 @@
                 <div class="input-field">
                     <textarea id="state-input" class="materialize-textarea"></textarea>
                     <label for="textarea1">Enter Address, City, State, or Zip for Local Represntatives</label>
-                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state"><i
-                            class="material-icons">search</i>
+                    <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state">
+                        <i class="material-icons">search</i>
                     </button>
-                    <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action"
-                        id="history-state">
+                    <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action" id="history-state">
                         <i class="material-icons">history</i>
                     </button>
                 </div>
@@ -62,9 +59,8 @@
         </div>
     </div>
 </body>
-
 </html>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/api.js"></script>
-<script src="assets/JS/script.js"></script>
+<script src="assets/js/script.js"></script>
