--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </li>
                 <li class="reps"></li>
             </ul>
-            <div class="col s9 display-news">
+            <div class="col s9 display-news"></div>
                 <div class="col s9 collection-header no-news card horizontal">
                     <div class="card-content">
                         <p>Select a Representative name to display latest news</p>
