mobile responsive stacking added

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             </form>
         </div>
         <div class="row">
-            <ul class="collection with-header col s3 z-depth-1">
+            <ul class="collection with-header col l3 z-depth-1">
                 <li class="collection-header">
                     <h5 class="cursive">Representatives</h5>
                 </li>
                 <li class="reps"></li>
             </ul>
-            <div class="col s9 display-news"></div>
-                <div class="col s9 collection-header no-news card horizontal">
+            <div class="col l9 display-news"></div>
+                <div class="col l9 collection-header no-news card horizontal">
                     <div class="card-content">
                         <p>Select a Representative name to display latest news</p>
                     </div>
