--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <form class="col s12">
                 <div class="input-field">
                     <textarea id="state-input" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Enter Address, City, State, or Zip for Local Represntatives</label>
+                    <label for="textarea1">Enter Location for Representatives</label>
                     <button class="btn waves-effect waves-light black" type="submit" name="action" id="submit-state">
                         <i class="material-icons">search</i>
                     </button>
@@ -48,14 +48,14 @@
             </form>
         </div>
         <div class="row">
-            <ul class="collection with-header col s3 z-depth-1">
+            <ul class="collection with-header col m3 z-depth-1">
                 <li class="collection-header">
                     <h5 class="cursive">Representatives</h5>
                 </li>
                 <li class="reps"></li>
             </ul>
-            <div class="col s9 display-news"></div>
-                <div class="col s9 collection-header no-news card horizontal">
+            <div class="col m9 display-news"></div>
+                <div class="col m9 collection-header no-news card horizontal">
                     <div class="card-content">
                         <p>Select a Representative name to display latest news</p>
                     </div>
